<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CloudActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/storage_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="仓库名:" />

        <EditText
            android:id="@+id/storage_pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="仓库密码:" />

        <EditText
            android:id="@+id/edit_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="云端IP(IPv4):" />

        <EditText
            android:id="@+id/edit_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="端口号:" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ipread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_auto_write"
                android:layout_marginLeft="10dp"
                android:background="@color/normal_botton"/>

            <Button
                android:id="@+id/ipsave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_save"
                android:layout_marginLeft="20dp"
                android:background="@color/normal_botton"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:layout_marginLeft="10dp"
                android:background="@color/normal_botton"/>

            <Button
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download"
                android:layout_marginLeft="55dp"
                android:background="@color/normal_botton"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>